--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </article>
             </article>
             <article>
-                <img src="sorriso_2.png" alt="">
+                <img src="imgs/sorriso_2.png" alt="">
             </article>
             <article>
                 <h3>Fifth article</h3>
